# ATINormalMapper

./: .appveyor.yml  .clang-format  .travis.yml  ArgFileIO.cpp  ArgFileIO.h  AtiTriBoxMoller.h  CHANGELOG.md  CMakeLists.txt  DllEntry.cpp  FileDialog.h  FileDialog_win.cpp  MAX4ExportNMF.dsp  MAX5ExportNMF.dsp  MAX6ExportNMF.dsp  MAXExportNMF.cpp  MAXExportNMF.dsp  MAXExportNMF.h  MAXExportNMF.rc  Maya45NMFExport.dsp  Maya50NMFExport.dsp  MessageBox.h  MessageBox_win.cpp  NMFConvert.cpp  NMFConvert.dsp  NMFExport.dsp  NMFView.cpp  NMFView.dsp  NMFView.rc  NativeDialogs.cpp  NativeDialogs.h  NmFileIO.cpp  NmFileIO.h  NormalMapCombiner.cpp  NormalMapCombiner.dsp  NormalMapExport.cpp  NormalMapper.cpp  NormalMapper.dsp  NormalMapper.rc  README.md  SMDFileIO.cpp  (+8 more)
Common/: ArgFileIO.cpp  CMakeLists.txt  NativeDialogs.cpp  NativeDialogs.h
GL/: GLAti.h
Mac/: Endian.h  Info.plist  MacSpecific.cpp  MacSpecific.h  mayaprefix.h  prefix.h
Mac/Maya60NMFExport.xcode/: project.pbxproj
Mac/NMFConvert.xcode/: project.pbxproj
Mac/NMFView.xcode/: project.pbxproj
Mac/NormalMapCombiner.xcode/: project.pbxproj
Mac/NormalMapper.xcode/: project.pbxproj
NMFConvert/: CMakeLists.txt  NMFConvert.cpp  NMFConvert.rc
NMFExport/: CMakeLists.txt
NMFExport/MAX/: MAXExportNMF.cpp  MAXExportNMF.h
NMFExport/Maya/: NormalMapExport.cpp
NMFView/: CMakeLists.txt  NMFView.cpp
NormalMapCombiner/: CMakeLists.txt  NormalMapCombiner.rc
NormalMapper/: AtiOctree.cpp  AtiOctree.h  AtiTriBoxMoller.cpp  CMakeLists.txt  NormalMapper.cpp
TGAtoDOT3/: CMakeLists.txt  TGAtoDOT3.cpp  TGAtoDOT3.rc
WorldSpaceifier/: CMakeLists.txt  WorldSpaceifier.cpp  WorldSpaceifier.rc
data/: AddedBumpOutput.tga
doc/: NormalMap.ppt
